--- a/MessengerLite/src/main/resources/application.properties
+++ b/MessengerLite/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Messenger
-spring.datasource.username=root
-spring.datasource.password=TerMiNaTor_309
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jackson.time-zone: Asia/Ho_Chi_Minh
 #spring.jpa.show-sql: true
